--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,8 +18,12 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 Suggests: 
     testthat (>= 3.0.0),
-    covr
+    covr,
+    lintr
 Config/testthat/edition: 3
 Imports: 
     sessioninfo,
-    testit
+    testit,
+    DAISIE (>= 3.2.0)
+Remotes: 
+    rsetienne/DAISIE
