--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,6 +24,7 @@ Config/testthat/edition: 3
 Imports: 
     sessioninfo,
     testit,
-    DAISIE (>= 3.2.0)
+    DAISIE (>= 3.2.0),
+    readr
 Remotes: 
     rsetienne/DAISIE@develop
