--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,4 +6,5 @@ export(is_on_cluster)
 export(load_txt_results)
 export(print_main_header)
 export(run_analysis)
+export(run_main)
 export(setup_standard_model_args)
