--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,6 +25,7 @@ Imports:
     sessioninfo,
     testit,
     DAISIE (>= 3.2.0),
-    readr
+    readr,
+    tibble
 Remotes: 
     rsetienne/DAISIE@develop
