Touch up docs and namespace

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,6 @@ export(create_output_folder)
 export(default_params_doc)
 export(is_on_cluster)
 export(load_txt_results)
-export(print_main_header)
+export(print_metadata)
 export(run_analysis)
-export(run_main)
 export(setup_standard_model_args)
