--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -46,7 +46,7 @@ jobs:
       - name: Query dependencies
         run: |
           install.packages('remotes')
-          remotes::install_github("Neves-P/hawaiispiders", auth_token = ${{ secrets.ACESS_TOKEN }})
+          remotes::install_github("Neves-P/hawaiispiders", auth_token = "${{ secrets.ACESS_TOKEN }}"")
           saveRDS(remotes::dev_package_deps(dependencies = TRUE), ".github/depends.Rds", version = 2)
           writeLines(sprintf("R-%i.%i", getRversion()$major, getRversion()$minor), ".github/R-version")
         shell: Rscript {0}
@@ -69,7 +69,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          remotes::install_github("Neves-P/hawaiispiders", auth_token = ${{ secrets.ACESS_TOKEN }})
+          remotes::install_github("Neves-P/hawaiispiders", auth_token = "${{ secrets.ACESS_TOKEN }}"")
           remotes::install_deps(dependencies = TRUE)
           remotes::install_cran("rcmdcheck")
         shell: Rscript {0}
