--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -3,14 +3,14 @@
 on:
   push:
     branches:
-      - main
-      - master
-      - develop
+      # - main
+      # - master
+      # - develop
   pull_request:
     branches:
-      - main
-      - master
-      - develop
+      # - main
+      # - master
+      # - develop
 
 name: R-CMD-check
 
