--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -1,14 +1,14 @@
 on:
   push:
     branches:
-      - main
-      - master
-      - develop
+      # - main
+      # - master
+      # - develop
   pull_request:
     branches:
-      - main
-      - master
-      - develop
+      # - main
+      # - master
+      # - develop
 
 name: test-coverage
 
