--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,12 +2,17 @@ Package: DAISIEutils
 Title: Utility Functions for the DAISIE Package
 Date: 2021-03-12
 Version: 0.0.0.9001
-Authors@R: 
+Authors@R: c(
     person(given = "Pedro",
            family = "Neves",
            role = c("aut", "cre"),
            email = "p.m.santos.neves@rug.nl",
-           comment = c(ORCID = "0000-0003-2561-4677"))
+           comment = c(ORCID = "0000-0003-2561-4677")),
+    person(given = "Joshua W.",
+           family = "Lambert",
+           role = c("aut"),
+           email = "j.w.l.lambert@rug.nl",
+           comment = c(ORCID = "0000-0001-5218-3046")))
 Description: The goal of DAISIEutils is to collect useful utility functions that
     are used reccurently in DAISIE projects. DAISIEutils is a companion package 
     of the R package DAISIE.
