--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -5,10 +5,13 @@ on:
     branches:
       - main
       - master
+      - develop
+
   pull_request:
     branches:
       - main
       - master
+      - develop
 
 name: R-CMD-check
 
