--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,8 @@
 export(calc_bic)
 export(create_output_folder)
 export(default_params_doc)
+export(is_daisie_data)
 export(is_on_cluster)
 export(print_metadata)
 export(run_analysis)
-export(setup_standard_model_args)
+export(setup_model)
