--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(calc_bic)
 export(calc_loglik_ratio)
 export(calc_p_value)
 export(calc_power)
+export(choose_best_model)
 export(create_output_folder)
 export(default_params_doc)
 export(is_daisie_data)
