--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -6,13 +6,14 @@ on:
       - main
       - master
       - develop
-      - tests
+      - sensitivity
 
   pull_request:
     branches:
       - main
       - master
       - develop
+      - sensitivity
 
 name: R-CMD-check
 
