--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,7 +24,7 @@ Authors@R: c(
            role = c("aut"),
            comment = c(ORCID = "0000-0003-1107-7049")))
 Description: The goal of DAISIEutils is to collect useful utility functions that
-    are used reccurently in DAISIE projects. DAISIEutils is a companion package 
+    are used recurently in DAISIE projects. DAISIEutils is a companion package 
     of the R package DAISIE.
 License: GPL (>= 3)
 Encoding: UTF-8
