--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -7,6 +7,7 @@ on:
       - master
       - develop
       - sensitivity
+      - boot
 
   pull_request:
     branches:
@@ -14,6 +15,7 @@ on:
       - master
       - develop
       - sensitivity
+      - boot
 
 name: R-CMD-check
 
