added jump_seed as exported

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(create_output_folder)
 export(default_params_doc)
 export(is_daisie_data)
 export(is_on_cluster)
+export(jump_seed)
 export(plot_col_ranks)
 export(plot_metric_hist)
 export(print_metadata)
