--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(jump_seed)
 export(plot_col_ranks)
 export(plot_metric_hist)
 export(print_metadata)
+export(read_seed)
 export(run_daisie_ml)
 export(run_sim)
 export(sensitivity)
