--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,5 +18,6 @@ export(print_metadata)
 export(read_seed)
 export(run_daisie_ml)
 export(run_sim)
+export(save_seed)
 export(sensitivity)
 export(setup_model)
