--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -3,18 +3,16 @@
 on:
   push:
     branches:
-      - main
       - master
       - develop
-      - sensitivity
+      - gof
       - boot
 
   pull_request:
     branches:
-      - main
       - master
       - develop
-      - sensitivity
+      - gof
       - boot
 
 name: R-CMD-check
