linting and updating documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,8 +7,10 @@ export(calc_loglik_ratio)
 export(calc_p_value)
 export(calc_power)
 export(choose_best_model)
+export(col_rank)
 export(create_output_folder)
 export(default_params_doc)
+export(goodness_fit)
 export(is_daisie_data)
 export(is_on_cluster)
 export(jump_seed)
