--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -5,11 +5,13 @@ on:
     branches:
       - master
       - develop
+      - logs
 
   pull_request:
     branches:
       - master
       - develop
+      - logs
 
 name: R-CMD-check
 
