--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,8 +6,8 @@ export(calc_bic)
 export(calc_loglik_ratio)
 export(calc_p_value)
 export(calc_power)
-export(check_repeated_seeds)
-export(check_repeated_seeds_long)
+export(check_rep_seeds)
+export(check_rep_seeds_depr)
 export(choose_best_model)
 export(create_output_folder)
 export(default_params_doc)
