--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -5,13 +5,13 @@ on:
     branches:
       - master
       - develop
-      - logs
+      - read_results
 
   pull_request:
     branches:
       - master
       - develop
-      - logs
+      - read_results
 
 name: R-CMD-check
 
