--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(default_params_doc)
 export(is_daisie_data)
 export(is_on_cluster)
 export(print_metadata)
+export(read_model_results)
 export(run_daisie_ml)
 export(run_sim)
 export(sensitivity)
