--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -3,13 +3,13 @@ on:
     branches:
       - master
       - develop
-      - logs
+      - read_results
 
   pull_request:
     branches:
       - master
       - develop
-      - logs
+      - read_results
 
 name: test-coverage
 
