--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,6 +31,8 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
+URL: https://github.com/tece-lab/DAISIEutils
+BugReports: https://github.com/tece-lab/DAISIEutils/issues
 Depends: R (>= 4.0.0)
 Suggests: 
     testthat (>= 3.0.0),
