--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,7 +22,12 @@ Authors@R: c(
            family = "Bilderbeek",
            email = "richel@richelbilderbeek.nl",
            role = c("aut"),
-           comment = c(ORCID = "0000-0003-1107-7049")))
+           comment = c(ORCID = "0000-0003-1107-7049")),
+               person(given = "Rampal S.",
+           family = "Etienne",
+           email = "r.s.etienne@rug.nl",
+           role = c("aut"),
+           comment = c(ORCID = "0000-0003-2142-7612")))
 Description: The goal of DAISIEutils is to collect useful utility functions that
     are used recurently in DAISIE projects. DAISIEutils is a companion package 
     of the R package DAISIE.
