--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(calc_bic)
 export(calc_loglik_ratio)
 export(calc_p_value)
 export(calc_power)
+export(calc_sim_metrics)
 export(check_rep_seeds)
 export(check_rep_seeds_depr)
 export(choose_best_model)
@@ -14,6 +15,7 @@ export(default_params_doc)
 export(is_daisie_data)
 export(is_on_cluster)
 export(plot_bootstrap_results)
+export(plot_sim_metrics)
 export(print_metadata)
 export(read_model_results)
 export(run_daisie_ml)
