--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(default_params_doc)
 export(is_daisie_data)
 export(is_on_cluster)
 export(plot_bootstrap_results)
+export(plot_ll_surface)
 export(plot_sim_metrics)
 export(print_metadata)
 export(read_model_results)
@@ -22,4 +23,5 @@ export(run_daisie_ml)
 export(run_sim)
 export(sensitivity)
 export(setup_model)
+export(setup_std_pars2)
 export(summarize_bootstrap_results)
