--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Date: 2022-05-31
 Version: 1.1.0
 Authors@R: c(
     person(given = "Pedro",
-           family = "Neves",
+           family = "Santos Neves",
            role = c("aut", "cre"),
            email = "p.m.santos.neves@rug.nl",
            comment = c(ORCID = "0000-0003-2561-4677")),
