--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(check_rep_seeds)
 export(check_rep_seeds_depr)
 export(choose_best_model)
 export(create_output_folder)
+export(create_results_dir_path)
 export(default_params_doc)
 export(is_daisie_data)
 export(is_on_cluster)
