--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -48,7 +48,7 @@ Imports:
     sessioninfo,
     testit,
     DAISIE (>= 4.0.5),
-    readr,
-    tibble
+    ggplot2,
+    cowplot
 Remotes: 
     rsetienne/DAISIE@v4.2.0
