--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -47,8 +47,8 @@ Config/testthat/edition: 3
 Imports: 
     sessioninfo,
     testit,
-    DAISIE (>= 4.0.5),
+    DAISIE (>= 4.2.1),
     ggplot2,
     cowplot
 Remotes: 
-    rsetienne/DAISIE@v4.2.0
+    rsetienne/DAISIE
