--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -2,9 +2,9 @@
 # Need help debugging build failures? Start at https://github.com/r-lib/actions#where-to-find-help
 on:
   push:
-    branches:
   pull_request:
-    branches:
+  schedule:
+  - cron: "0 0 * * *"
 
 name: R-CMD-check
 
