added run_daisie_2type_ml and setup_2type_model, updated get_available_models, documentation and tests, added R script and bash scripts for 2type analysis

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,9 +17,11 @@ export(is_on_cluster)
 export(plot_bootstrap_results)
 export(print_metadata)
 export(read_model_results)
+export(run_daisie_2type_ml)
 export(run_daisie_ml)
 export(run_sim)
 export(sensitivity)
+export(setup_2type_model)
 export(setup_model)
 export(setup_std_pars2)
 export(summarize_bootstrap_results)
