--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -47,8 +47,6 @@ Config/testthat/edition: 3
 Imports: 
     sessioninfo,
     testit,
-    DAISIE (>= 4.3.1),
+    DAISIE,
     ggplot2,
     cowplot
-Remotes:
-    rsetienne/DAISIE@v4.3.1
