--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -38,7 +38,7 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 URL: https://github.com/tece-lab/DAISIEutils
 BugReports: https://github.com/tece-lab/DAISIEutils/issues
-Depends: R (>= 4.0.0)
+Depends: R (>= 4.2.0)
 Suggests: 
     testthat (>= 3.0.0),
     covr,
@@ -47,6 +47,6 @@ Config/testthat/edition: 3
 Imports: 
     sessioninfo,
     testit,
-    DAISIE,
+    DAISIE (>= 4.4.0),
     ggplot2,
     cowplot
